--- a/web/templates/post/show.html.eex
+++ b/web/templates/post/show.html.eex
@@ -11,6 +11,10 @@
     <strong>Body:</strong>
     <%= @post.body %>
   </li>
+  <li>
+    <strong>Draft:</strong>
+    <%= @post.draft %>
+  </li>
 
 </ul>
 
